--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -72,7 +72,7 @@ tavily-python==0.5.0
 pytest==7.4.4
 pytest-asyncio==0.23.3
 pytest-cov==4.1.0
-httpx-mock==0.15.0
+# httpx-mock 已从 PyPI 下架/更名，当前测试未使用；若需 mock httpx 可改用 respx 或 pytest-httpx
 
 # 代码质量
 black==24.1.1
