除部署外跑通

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,7 +25,8 @@ pydantic[email]
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 bcrypt==4.1.2
-pyjwt==2.8.0
+jose
+python-jose[cryptography]
 
 # 日期时间
 python-dateutil==2.8.2
